// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> accepts className props 1`] = `
<div>
  <div
    class="carousel center"
    id="Carousel-mockId"
  >
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/1"
        src="https://lorempixel.com/250/250/nature/1"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/2"
        src="https://lorempixel.com/250/250/nature/2"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/3"
        src="https://lorempixel.com/250/250/nature/3"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/4"
        src="https://lorempixel.com/250/250/nature/4"
      />
    </a>
  </div>
</div>
`;

exports[`<Carousel /> accepts external \`id\` value 1`] = `
<div>
  <div
    class="carousel"
    id="ID"
  >
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/1"
        src="https://lorempixel.com/250/250/nature/1"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/2"
        src="https://lorempixel.com/250/250/nature/2"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/3"
        src="https://lorempixel.com/250/250/nature/3"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/4"
        src="https://lorempixel.com/250/250/nature/4"
      />
    </a>
  </div>
</div>
`;

exports[`<Carousel /> renders 1`] = `
<div>
  <div
    class="carousel"
    id="Carousel-mockId"
  >
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/1"
        src="https://lorempixel.com/250/250/nature/1"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/2"
        src="https://lorempixel.com/250/250/nature/2"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/3"
        src="https://lorempixel.com/250/250/nature/3"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/4"
        src="https://lorempixel.com/250/250/nature/4"
      />
    </a>
  </div>
</div>
`;

exports[`<Carousel /> renders centered images 1`] = `
<div>
  <div
    class="carousel"
    id="Carousel-mockId"
  >
    <a
      class="carousel-item valign-wrapper"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/1"
        src="https://lorempixel.com/250/250/nature/1"
      />
    </a>
    <a
      class="carousel-item valign-wrapper"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/2"
        src="https://lorempixel.com/250/250/nature/2"
      />
    </a>
    <a
      class="carousel-item valign-wrapper"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/3"
        src="https://lorempixel.com/250/250/nature/3"
      />
    </a>
    <a
      class="carousel-item valign-wrapper"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/4"
        src="https://lorempixel.com/250/250/nature/4"
      />
    </a>
  </div>
</div>
`;

exports[`<Carousel /> renders fixed items 1`] = `
<div>
  <div
    class="carousel"
    id="Carousel-mockId"
  >
    <div
      class="carousel-fixed-item center"
    >
      <span>
        Do you rock!?
      </span>
    </div>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/1"
        src="https://lorempixel.com/250/250/nature/1"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/2"
        src="https://lorempixel.com/250/250/nature/2"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/3"
        src="https://lorempixel.com/250/250/nature/3"
      />
    </a>
    <a
      class="carousel-item"
    >
      <img
        alt="https://lorempixel.com/250/250/nature/4"
        src="https://lorempixel.com/250/250/nature/4"
      />
    </a>
  </div>
</div>
`;
